crates/hwpx/tests/snapshots/core_types_tests__fill_brush_tests__parse_fill_brush_with_both_none_colors.snap
---
source: crates/hwpx/tests/core_types_tests.rs
expression: fill_brush
---
winBrush:
  "@faceColor": none
  "@hatchColor": none
  "@alpha": 0.5
