crates/hwpx/tests/snapshots/core_types_tests__fill_brush_tests__parse_fill_brush_with_none_face_color.snap
---
source: crates/hwpx/tests/core_types_tests.rs
expression: fill_brush
---
winBrush:
  "@faceColor": none
  "@hatchColor": "#000000"
  "@alpha": 0
