crates/hwpx/tests/snapshots/core_types_tests__fill_brush_tests__parse_fill_brush_with_windows_brush.snap
---
source: crates/hwpx/tests/core_types_tests.rs
expression: fill_brush
---
winBrush:
  "@faceColor": "#FFFFFF"
  "@hatchColor": "#000000"
  "@alpha": 0
